<resources>
    <string name="app_name">Yeouth</string>
    <string name="home">Home</string>
    <string name="feeds">Feeds</string>
    <string name="profile">Profile</string>
    <string name="shopping_bag">Shopping Bag</string>
    <string name="search">Search</string>
    <string name="next">Next</string>
    <string name="totalPrice_temp">Rp xxx.xxx,xx</string>
    <string name="total_price">Total Price :</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_image">Item Image</string>
    <string name="product_name">Product Name</string>
    <string name="group_name">Group Name</string>
    <string name="release_year">Release Year</string>
    <string name="product_category">Product Category</string>
    <string name="product_version">Product Version</string>
    <string name="product_summary">Product Summary</string>
    <string name="product_price">Product Price</string>
    <string name="qty">Qty :</string>
    <string name="product_rate">rate</string>
    <string name="sold">sold</string>
    <string name="separator">|</string>
    <string name="trending_collection">Trending Collection</string>
    <string name="see_all">see all</string>
    <string name="upcoming_merchandise">Upcoming Merchandise</string>
    <string name="recommendation_for_you">Recommendation For You</string>
    <string name="based_on_search">Based on search</string>
    <string name="filter">Filter</string>
    <string name="add_shopping_bag">+ Shopping Bag</string>
    <string name="buy_now">Buy Now</string>
    <string name="product_group">Product Group</string>
    <string name="product_wishlisted">wish</string>
    <string name="product_detail">Product Detail</string>
    <string name="released_date">Released Date : </string>
    <string name="dot">•</string>
    <string name="quantity">Quantity :</string>
    <string name="divider">divider</string>
    <string name="product_description">Product Description</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="shipping_option">Delivery Option</string>
    <string name="payment_method">Payment Method</string>
    <string name="receiver_name">Receiver Name</string>
    <string name="x_0">x 0</string>
    <string name="new_collection">New Collection</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sollicitudin, turpis ac convallis placerat, ante libero tincidunt lacus, at hendrerit dolor lacus at arcu. Nunc maximus orci eget dolor sagittis tempor. Fusce fermentum varius libero ac pharetra. Fusce tempus neque tellus, varius imperdiet purus tempus nec. Donec molestie dolor eget lorem egestas, pulvinar egestas libero imperdiet. Nulla maximus semper pretium. Suspendisse ut est sit amet ligula pellentesque consequat quis eget quam. Donec justo augue, accumsan et velit id, rutrum congue mauris. Phasellus eleifend, mauris id accumsan facilisis, risus nisi gravida ipsum, a bibendum elit enim eget dui. Vivamus id magna sit amet massa maximus porta id eget lacus. Quisque in efficitur ipsum, vitae imperdiet nulla.

    In ultrices, leo rhoncus varius efficitur, lectus sapien convallis leo, sit amet varius velit sapien eu arcu. In libero nibh, sagittis nec ultricies pulvinar, vehicula non mi. Aliquam facilisis mi leo. Curabitur ac urna faucibus, facilisis ex in, mollis odio. Maecenas placerat turpis sed placerat porttitor. Etiam non neque at est dignissim dignissim. Pellentesque scelerisque sem vel ullamcorper ultricies. Curabitur vehicula dignissim enim sit amet posuere. Donec id dolor sed quam tempus euismod. Sed sodales libero id odio molestie dignissim. Phasellus lectus mauris, consectetur nec gravida vel, molestie non erat. Etiam quis neque viverra, placerat eros sed, porttitor ligula. Phasellus aliquam rutrum aliquam.

    Donec convallis facilisis erat non congue. Cras id eleifend felis. Donec ornare eget diam non auctor. Suspendisse consectetur, eros eu sagittis vestibulum, nisi tellus posuere nunc, sit amet aliquam orci ligula sed ipsum. Suspendisse pharetra quis lectus sed placerat. Fusce non ante cursus nisi aliquet malesuada sed a lorem. Etiam ac velit lectus. Ut consequat condimentum nisi sit amet maximus. Suspendisse fringilla vulputate arcu ac auctor. Morbi porta purus sed lorem tristique tempor. Nulla euismod eu ipsum sed vehicula. Nullam pellentesque vel lorem at rhoncus.

    Morbi metus lacus, fringilla a diam in, pretium bibendum orci. Quisque auctor placerat semper. Donec fermentum urna egestas nunc vehicula, in pulvinar erat ornare. Ut molestie tortor nec venenatis dignissim. In mollis nec nisi ut congue. Sed molestie vestibulum turpis, quis rhoncus enim convallis vitae. Sed nec scelerisque dui. Fusce sagittis nibh odio, viverra dignissim ante sagittis non. Cras id sem quis sem luctus vehicula eget sit amet dolor. Fusce fermentum dolor et dolor iaculis efficitur. Quisque magna mauris, aliquam sit amet rutrum id, cursus sit amet erat.

    Fusce ut blandit turpis. Etiam luctus libero vel felis hendrerit, eget tincidunt sem feugiat. Morbi nec enim ullamcorper, convallis tortor id, malesuada ligula. Donec efficitur accumsan leo, accumsan luctus massa rhoncus vitae. Ut at pharetra elit. Integer sed sem sit amet risus ornare auctor. Curabitur faucibus, mi porttitor efficitur auctor, velit arcu venenatis nibh, sit amet tempus leo tellus vitae tortor. Donec posuere luctus ipsum, quis tincidunt ante aliquam et. Nullam ut auctor risus, et porttitor lectus. Maecenas mattis dolor ac lacus gravida cursus. Sed vel porttitor purus. Ut ac ipsum sit amet neque interdum aliquam id vitae velit. Quisque pretium nisl at nisl posuere tincidunt.
    </string>
</resources>