<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CatalogDetail.ProductDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/detail_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <include
            android:id="@+id/main_statusbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/transparent_status_bar" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/detail_topbar_menu"
            app:layout_collapseMode="pin"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:menu="@menu/menu_topbar_detail"
            app:titleTextColor="@color/white"
            android:outlineProvider="none"
            app:title="Product Detail"/>
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/detail_bottombar_menu"
        android:layout_below="@id/detail_topbar">

        <ImageView
            android:id="@+id/detail_product_image"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/item_image"
            android:layout_gravity="top|center"/>

        <ScrollView
            android:id="@+id/detail_content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/layoutPadding"
                android:background="@drawable/bg_product_detail"
                android:layout_marginTop="250dp">

                <ImageView
                    android:id="@+id/detail_sheet_line"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_bottomsheet_line"
                    android:scaleType="centerCrop"
                    android:layout_centerHorizontal="true"
                    android:scaleX="5"
                    android:layout_margin="8dp"/>

                <LinearLayout
                    android:layout_below="@id/detail_sheet_line"
                    android:id="@+id/detail_group_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/detail_group_name"
                        style="?attr/textAppearanceOverline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/group_name"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="?attr/textAppearanceCaption"
                        android:text="@string/dot"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_gravity="center" />

                    <TextView
                        android:id="@+id/detail_product_category"
                        style="?attr/textAppearanceOverline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_category"
                        android:textSize="12sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/detail_product_name"
                    style="?attr/textAppearanceHeadline6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detail_group_category"
                    android:layout_marginBottom="4dp"
                    android:text="@string/product_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail_product_version"
                    style="?attr/textAppearanceBody2"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detail_product_name"
                    android:text="@string/product_version"
                    android:layout_marginBottom="12dp"/>

                <TextView
                    android:id="@+id/detail_product_price"
                    style="?attr/textAppearanceBody1"
                    android:layout_width="match_parent"
                    android:textStyle="bold"
                    android:textColor="?attr/colorPrimary"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detail_product_name"
                    android:layout_toEndOf="@id/detail_product_version"
                    android:text="@string/product_price"
                    android:layout_alignBaseline="@id/detail_product_version"
                    android:layout_marginBottom="12dp"
                    android:textAlignment="textEnd"/>

                <LinearLayout
                    android:id="@+id/detail_product_stat"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:orientation="horizontal"
                    android:layout_below="@id/detail_product_version"
                    android:showDividers="end"
                    android:divider="?android:dividerHorizontal"
                    android:elevation="0dp">

                    <ImageView
                        android:id="@+id/detail_rate"
                        android:layout_width="16dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/icon_rate"
                        android:contentDescription="@string/product_rate"
                        android:padding="-2dp"
                        android:layout_marginEnd="2dp"/>

                    <TextView
                        android:id="@+id/detail_product_rate"
                        style="?attr/textAppearanceCaption"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/product_rate"
                        android:gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="?attr/textAppearanceCaption"
                        android:text="@string/separator"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_gravity="center"/>

                    <ImageView
                        android:id="@+id/detail_sold"
                        android:layout_width="16dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/icon_sold"
                        android:contentDescription="@string/product_rate"
                        android:padding="-2dp"
                        android:layout_marginEnd="2dp"/>

                    <TextView
                        android:id="@+id/detail_product_sold"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="?attr/textAppearanceCaption"
                        android:text="@string/sold"
                        android:layout_gravity="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="?attr/textAppearanceCaption"
                        android:text="@string/separator"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_gravity="center"/>

                    <ImageView
                        android:id="@+id/detail_wishlisted"
                        android:layout_width="16dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/icon_wishlisted2"
                        android:contentDescription="@string/product_rate"
                        android:padding="-2dp"
                        android:layout_marginRight="2dp"
                        tools:ignore="RtlHardcoded" />

                    <TextView
                        android:id="@+id/detail_product_wishlisted"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="?attr/textAppearanceCaption"
                        android:text="@string/product_wishlisted"
                        android:layout_gravity="center"/>
                </LinearLayout>

                <ImageView
                    android:id="@+id/detail_divider"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/cream_dark"
                    android:layout_below="@id/detail_product_stat"
                    android:layout_marginVertical="8dp"
                    android:contentDescription="@string/divider" />

                <TextView
                    android:id="@+id/detail_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/detail_divider"
                    style="?attr/textAppearanceCaption"
                    android:text="@string/product_detail"
                    android:layout_marginVertical="4dp"/>

                <TextView
                    android:id="@+id/detail_release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?attr/textAppearanceCaption"
                    android:textColor="@color/black"
                    android:text="@string/released_date"
                    android:layout_below="@id/detail_desc"/>

                <TextView
                    android:id="@+id/detail_product_release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?attr/textAppearanceCaption"
                    android:textColor="@color/black"
                    android:text="@string/release_year"
                    android:layout_below="@id/detail_desc"
                    android:layout_toEndOf="@id/detail_release"
                    android:layout_marginLeft="4dp"/>

                <TextView
                    android:id="@+id/detail_product_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?attr/textAppearanceCaption"
                    android:textColor="@color/black"
                    android:text="@string/lorem_ipsum"
                    android:layout_below="@id/detail_product_release"
                    android:layout_marginBottom="250dp"/>
            </RelativeLayout>
        </ScrollView>
    </FrameLayout>

    <include
        android:id="@+id/detail_bottombar_menu"
        layout="@layout/bottombar_detail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottomBarPadding"
        android:layout_marginHorizontal="@dimen/layoutPadding"
        android:layout_alignParentBottom="true"/>

    <RelativeLayout
        android:id="@+id/detail_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <include
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/transparent_progress_circular" />
    </RelativeLayout>
</RelativeLayout>
