<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    app:cardUseCompatPadding="true">

<!--    TODO : add click for select and delete like in Tokopedia -->

    <RelativeLayout
        android:id="@+id/item_shoppingbag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:elevation="4dp">

        <ImageView
            android:id="@+id/item_shoppingbag_product_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/item_image" />

        <TextView
            android:id="@+id/item_shoppingbag_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            style="?attr/textAppearanceSubtitle1"
            android:text="@string/product_name"
            android:layout_toEndOf="@id/item_shoppingbag_product_img"
            android:layout_marginLeft="@dimen/viewPadding"
            android:layout_marginRight="@dimen/viewPadding"/>

        <TextView
            android:id="@+id/item_shoppingbag_product_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?attr/textAppearanceBody2"
            android:textSize="12sp"
            android:layout_marginLeft="@dimen/viewPadding"
            android:layout_marginRight="@dimen/viewPadding"
            android:layout_below="@id/item_shoppingbag_product_name"
            android:layout_toEndOf="@id/item_shoppingbag_product_img"
            android:text="@string/product_summary"/>


        <TextView
            android:id="@+id/item_shoppingbag_product_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/textAppearanceBody2"
            android:textSize="12sp"
            android:text="@string/product_version"
            android:layout_below="@id/item_shoppingbag_product_summary"
            android:layout_toEndOf="@id/item_shoppingbag_product_img"
            android:layout_marginLeft="@dimen/viewPadding"
            android:layout_marginRight="@dimen/viewPadding"/>

        <TextView
            android:id="@+id/item_shoppingbag_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/textAppearanceBody1"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimaryVariant"
            android:text="@string/product_price"
            android:layout_below="@id/item_shoppingbag_product_version"
            android:layout_toEndOf="@id/item_shoppingbag_product_img"
            android:layout_marginStart="@dimen/viewPadding"
            android:layout_marginBottom="8sp"/>

        <LinearLayout
            android:id="@+id/item_shoppingbag_editquantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_shoppingbag_product_price"
            android:orientation="horizontal"
            android:layout_marginStart="92dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/textAppearanceCaption"
                android:text="@string/qty"
                android:layout_gravity="center"
                android:layout_marginEnd="4dp"/>
            <TextView
                android:id="@+id/item_shoppingbag_btn_decre"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/bg_qty_button"
                android:text="-"
                android:textSize="16sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/item_shoppingbag_txt_quantity"
                android:layout_width="25dp"
                android:layout_height="20dp"
                style="?attr/textAppearanceCaption"
                android:text="0"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_gravity="center"
                android:gravity="center" />
            <TextView
                android:id="@+id/item_shoppingbag_btn_incre"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/bg_qty_button"
                android:text="+"
                android:textSize="16sp"
                android:gravity="center"/>
        </LinearLayout>

        <TextView
            android:id="@+id/item_shoppingbag_txt_totalPrice"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            style="?attr/textAppearanceSubtitle1"
            android:textStyle="bold"
            android:text="0"
            android:layout_toEndOf="@id/item_shoppingbag_editquantity"
            android:layout_below="@id/item_shoppingbag_product_price"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:textAlignment="textEnd"
            tools:ignore="RtlCompat"
            android:textColor="?attr/colorPrimary"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>